solved issue with contrast

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -24,14 +24,14 @@
         width: 160px;
         height: 44px;
         font-size: 1.4rem;
-        background-color: #3B82F6 ;
+        background-color: #1E40AF ;
         color: #F9FAFB;
         border-radius: 0.8rem;
         border: none;
     }
 
     .menu button:hover {
-        background: #2563eb;
+        background: #1E3A8A;
     }
 
     .navigation {
@@ -87,7 +87,7 @@
         margin: auto;
         padding: 8px;
         font-weight: 500;
-        color: F9FAFB ;
+        color: #F9FAFB ;
     }
 
     footer {
